    - Added maze generation algorithm setting with the options "Kruskal", "Recursive Backtracker", "Wilson", and "Binary Tree".
        For use with world generation modes that generate mazes.
    - Added "Total Hexes" settings for all planets, which control approximately how many hexes (and proprtionally trades) are generated for the respective planet.
  Changes:
    - Spiral world generation mode can now generate with either orientation of a spiral (clockwise or counterclockwise).
    - Properly adapted hexaprism spawning conditions to all world generation modes (even ones injected by other mods).
    - Revised the English description of the "Hex Span" quest condition type to more clearly describe that it measures "straight line" distance as opposed to "path through claims" distance.
    - Removed "Planet Size" settings for all planets.
    - Changed default island shapes on Vulcanus, Fulgora, Gleba, and Aquilo, each adjustable in mod settings.
    - Hex claim costs are now based on "path through claims" distance from spawn rather than "straight line" distance.
    - Trade volumes (total item values in trades) are now based on "path through claims" distance instead of "straight line" distance.
    - Passing signals R=0, G=0, and B=0 to a hex core no longer shuts off the light and instead makes it continue to use the default hexlight colors as defined in the settings.
  Balancing:
    - A hex containing sulfuric acid geysers (on Vulcanus) or crude oil wells (on Nauvis) is now guaranteed to exist near the spawn hex.
    - All world generation modes now produce islands with a configurable number of total hexes (in settings) so that Maze mode doesn't have too few hexes/trades and Solid mode doesn't have too many (for example).
    - The highest valued items on each planet now show up at 30% of the distance from spawn to the edge of the island, based on "path through claims" distance.