@@ -148,6 +148,7 @@ toggle-trade-overview=Toggle Trade Overview
 toggle-hex-rank=Toggle Hex Rank Info
 claim-hex-core=Claim Hex Core
 teleport-to-hex-core=Teleport to Hex Core
+pickup-nearby-items=Pick up items on ground
 
 [shortcut-name]
 claim-tool=Claim Hexes
