@@ -32,6 +32,11 @@ data:extend({
     },
     {
         type = "custom-input",
+        name = "pickup-nearby-items",
+        key_sequence = "CONTROL + G",
+    },
+    {
+        type = "custom-input",
         name = "hextorio-fast-entity-split",
         key_sequence = "CONTROL + mouse-button-2",
         linked_game_control = "fast-entity-split",
